Prevent horizontal overflow on HTML element

--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -847,5 +847,7 @@ html {
   }
 }
 
-
+html {
+  overflow-x: hidden;
+}
 
